# cli-box

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh-cn.md  release.sh  test.sh
.github/workflows/: ci.yml  release.yml  test-upgrade.yml
crates/cli-box-cli/src/: client.rs  main.rs
crates/cli-box-core/: Cargo.toml
crates/cli-box-core/tests/: daemon_integration.rs
crates/cli-box-daemon/src/: main.rs
crates/sandbox-cli/: Cargo.toml  build.rs
crates/sandbox-cli/src/: client.rs  main.rs  server.rs
crates/sandbox-core/: Cargo.toml
crates/sandbox-core/src/: player.rs  recorder.rs  scenario.rs
crates/sandbox-core/tests/: diff_integration.rs  (+6 more)
crates/sandbox-daemon/: Cargo.toml
crates/sandbox-daemon/src/: main.rs
docs/: ai-agent-openclaw-workflow.md  openclaw-claude-cli-box-practice.md
docs/design/: electron-rust-architecture.md  phase-8-fixes.md
docs/guide/: installation.md
docs/question_analysis/: opencode-tui-blank-screen.md
docs/task/: phase-8.md  task_records.json
electron-app/: electron-builder.config.cjs  package.json  pnpm-lock.yaml
electron-app/e2e/: close-dialog.spec.ts  fixtures.ts  tab-creation.spec.ts
release/: README.md  release-pipeline.md
sandbox-web/: package.json  pnpm-lock.yaml  vitest.config.ts
sandbox-web/src/: api.ts  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/src/: main.rs
tests/: MANUAL_TEST_GUIDE.md  REPORT.md  e2e-compound-start-screenshot.sh  e2e-linux-headless.sh  e2e-skill-install.sh  release_test.md
tests/fixtures/: full_scenario.yaml  minimal.yaml
(+61 files in other folders)
