[package]
name = "sandbox-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Sandbox daemon process — manages all sandbox instances"

[dependencies]
sandbox-core = { workspace = true, features = ["screencapturekit"] }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
